train on TNG test on SIMBA

--- a/data_spec.ipynb
+++ b/data_spec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "a06e5df5-c543-427d-bfaa-f2a2a3540c8e",
    "metadata": {},
    "outputs": [],
@@ -13,21 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "990e24da-7cd5-4a05-a5f7-208edc19e10c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_P = np.load(\"/home/chenze/data_gpfs02/CAMELS_multifield/raw_data/Maps_P_SIMBA_LH_z=0.00.npy\")\n",
-    "data_P = data_P.reshape(1000, 15, 256, 256)\n",
-    "\n",
-    "data_M = np.load(\"/home/chenze/data_gpfs02/CAMELS_multifield/raw_data/Maps_Mtot_SIMBA_LH_z=0.00.npy\")\n",
-    "data_M = data_M.reshape(1000, 15, 256, 256)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "a0ada774-3464-4cdb-ab99-c56af2182071",
    "metadata": {},
    "outputs": [
@@ -35,26 +21,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum of log10(M_img) = f15.50328541\n",
-      "Minimum of log10(M_img) = f9.66257858\n",
+      "Maximum of log10(M_img) = 15.50328541\n",
+      "Minimum of log10(M_img) = 9.66257858\n",
       "Maximum of log10(P_img) = 13.42540932\n",
       "Minimum of log10(P_img) = 0.74502987\n"
      ]
     }
    ],
    "source": [
-    "field = 'Mtot'\n",
     "base = \"/home/chenze/data_gpfs02/CAMELS_multifield/raw_data/\"\n",
     "simcode = \"IllustrisTNG\"\n",
+    "alias = \"TNG\"\n",
     "\n",
     "# these have length 1000\n",
     "sim_param = np.loadtxt(f'{base}/params_LH_{simcode}.txt', unpack=True)\n",
     "sim_param = np.repeat(sim_param, 15, axis=1).reshape(6, 15000).T\n",
     "\n",
-    "# The 2D images\n",
-    "# 1st dimension corresponds to parameter values,\n",
-    "# 2nd dimension are different maps for a given simulation,\n",
-    "# 3rd and 4th dimension are the image dimensions\n",
     "M_img = np.load(f'{base}/Maps_Mtot_{simcode}_LH_z=0.00.npy').reshape(15000, 256, 256)\n",
     "M_img = np.log10(M_img)\n",
     "print(f\"Maximum of log10(M_img) = {M_img.max():.8f}\")\n",
@@ -74,34 +56,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "c8aad03c-4cb7-40ae-ba2f-5efec951a264",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float32(0.0)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imgs_all.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "491c4bad-d40d-4fe9-baf4-e13d3f76314c",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"/home/chenze/data_gpfs02/CAMELS_multifield/dataset/compiled_img_TNG.npy\", imgs_all)\n",
     "np.save(\"/home/chenze/data_gpfs02/CAMELS_multifield/dataset/compiled_params_TNG.npy\", sim_param)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d08ce951-5caa-4edb-a1e4-c34809cfcca3",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c9e104d4-5ed4-4c0b-af6c-adb84be58357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_min = 9.66257858\n",
+    "M_max = 15.50328541\n",
+    "P_min = 0.74502987\n",
+    "P_max = 13.42540932"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9afc1b90-d9ef-444e-ae6d-e1584d880e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum of log10(M_img) = 15.50328541\n",
+      "Minimum of log10(M_img) = 9.66257858\n",
+      "Maximum of log10(P_img) = 13.42540932\n",
+      "Minimum of log10(P_img) = 0.74502987\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# change these according to your path\n",
+    "base = \"/home/chenze/data_gpfs02/CAMELS_multifield/raw_data/\"\n",
+    "simcode = \"IllustrisTNG\"\n",
+    "alias = \"TNG\"\n",
+    "save_path = \"/home/chenze/data_gpfs02/CAMELS_multifield/dataset/\"\n",
+    "\n",
+    "# the param\n",
+    "sim_param = np.loadtxt(f'{base}/params_LH_{simcode}.txt', unpack=True)\n",
+    "sim_param = np.repeat(sim_param, 15, axis=1).reshape(6, 15000).T\n",
+    "\n",
+    "# read & preprocessing img data\n",
+    "M_img = np.load(f'{base}/Maps_Mtot_{simcode}_LH_z=0.00.npy').reshape(15000, 256, 256)\n",
+    "M_img = np.log10(M_img)\n",
+    "print(f\"Maximum of log10(M_img) = {M_img.max():.8f}\") # the normalization should be\n",
+    "print(f\"Minimum of log10(M_img) = {M_img.min():.8f}\") # same for two prescriptions!\n",
+    "M_img = (M_img - M_min) / (M_max - M_min)\n",
+    "\n",
+    "P_img = np.load(f'{base}/Maps_P_{simcode}_LH_z=0.00.npy').reshape(15000, 256, 256)\n",
+    "P_img = np.log10(P_img)\n",
+    "print(f\"Maximum of log10(P_img) = {P_img.max():.8f}\")\n",
+    "print(f\"Minimum of log10(P_img) = {P_img.min():.8f}\")\n",
+    "P_img = (P_img - P_min) / (P_max - P_min)\n",
+    "\n",
+    "# combine the data\n",
+    "imgs_all = np.zeros([15000, 2, 256, 256], dtype=np.float32)\n",
+    "imgs_all[:,0,:,:] = M_img\n",
+    "imgs_all[:,1,:,:] = P_img\n",
+    "\n",
+    "np.save(save_path+f\"compiled_img_{alias}.npy\", imgs_all)\n",
+    "np.save(save_path+f\"compiled_params_{alias}.npy\", sim_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e39f4969-eb64-4a81-81c9-6948f1df4e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum of log10(P_img) = 13.43841743\n",
+      "Minimum of log10(P_img) = -0.21077976\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# change these according to your path\n",
+    "base = \"/home/chenze/data_gpfs02/CAMELS_multifield/raw_data/\"\n",
+    "simcode = \"SIMBA\"\n",
+    "alias = \"SIMBA\"\n",
+    "save_path = \"/home/chenze/data_gpfs02/CAMELS_multifield/dataset/\"\n",
+    "\n",
+    "# the param\n",
+    "sim_param = np.loadtxt(f'{base}/params_LH_{simcode}.txt', unpack=True)\n",
+    "sim_param = np.repeat(sim_param, 15, axis=1).reshape(6, 15000).T\n",
+    "\n",
+    "# read & preprocessing img data\n",
+    "M_img = np.load(f'{base}/Maps_Mtot_{simcode}_LH_z=0.00.npy').reshape(15000, 256, 256)\n",
+    "M_img = np.log10(M_img)\n",
+    "M_img = (M_img - M_img.min()) / (M_img.max() - M_img.min())\n",
+    "\n",
+    "P_img = np.load(f'{base}/Maps_P_{simcode}_LH_z=0.00.npy').reshape(15000, 256, 256)\n",
+    "P_img = np.log10(P_img)\n",
+    "print(f\"Maximum of log10(P_img) = {P_img.max():.8f}\")\n",
+    "print(f\"Minimum of log10(P_img) = {P_img.min():.8f}\")\n",
+    "P_img = (P_img - P_img.min()) / (P_img.max() - P_img.min())\n",
+    "\n",
+    "# combine the data\n",
+    "imgs_all = np.zeros([15000, 2, 256, 256], dtype=np.float32)\n",
+    "imgs_all[:,0,:,:] = M_img\n",
+    "imgs_all[:,1,:,:] = P_img\n",
+    "\n",
+    "np.save(save_path+f\"compiled_img_{alias}.npy\", imgs_all)\n",
+    "np.save(save_path+f\"compiled_params_{alias}.npy\", sim_param)"
    ]
   },
   {
@@ -290,75 +372,6 @@
     "        for step, (batch_data, batch_targ) in enumerate(valid_loader):\n",
     "            batch_data = batch_data.type(torch.FloatTensor).to(device)\n",
     "            batch_targ = batch_targ.type(torch.FloatTensor).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "2b9f87c3-fe44-4da1-a61c-9e7745fa2246",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'SupportsArrayInterface'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str | None'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'Image'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Creates an image memory from an object exporting the array interface\n",
-       "(using the buffer protocol)::\n",
-       "\n",
-       "  from PIL import Image\n",
-       "  import numpy as np\n",
-       "  a = np.zeros((5, 5))\n",
-       "  im = Image.fromarray(a)\n",
-       "\n",
-       "If ``obj`` is not contiguous, then the ``tobytes`` method is called\n",
-       "and :py:func:`~PIL.Image.frombuffer` is used.\n",
-       "\n",
-       "In the case of NumPy, be aware that Pillow modes do not always correspond\n",
-       "to NumPy dtypes. Pillow modes only offer 1-bit pixels, 8-bit pixels,\n",
-       "32-bit signed integer pixels, and 32-bit floating point pixels.\n",
-       "\n",
-       "Pillow images can also be converted to arrays::\n",
-       "\n",
-       "  from PIL import Image\n",
-       "  import numpy as np\n",
-       "  im = Image.open(\"hopper.jpg\")\n",
-       "  a = np.asarray(im)\n",
-       "\n",
-       "When converting Pillow images to arrays however, only pixel values are\n",
-       "transferred. This means that P and PA mode images will lose their palette.\n",
-       "\n",
-       ":param obj: Object with array interface\n",
-       ":param mode: Optional mode to use when reading ``obj``. Will be determined from\n",
-       "  type if ``None``.\n",
-       "\n",
-       "  This will not be used to convert the data after reading, but will be used to\n",
-       "  change how the data is read::\n",
-       "\n",
-       "    from PIL import Image\n",
-       "    import numpy as np\n",
-       "    a = np.full((1, 1), 300)\n",
-       "    im = Image.fromarray(a, mode=\"L\")\n",
-       "    im.getpixel((0, 0))  # 44\n",
-       "    im = Image.fromarray(a, mode=\"RGB\")\n",
-       "    im.getpixel((0, 0))  # (44, 1, 0)\n",
-       "\n",
-       "  See: :ref:`concept-modes` for general information about modes.\n",
-       ":returns: An image object.\n",
-       "\n",
-       ".. versionadded:: 1.1.6\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/env/miniconda3/envs/torch_env/lib/python3.9/site-packages/PIL/Image.py\n",
-       "\u001b[0;31mType:\u001b[0m      function"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from PIL import Image\n",
-    "\n",
-    "Image.fromarray?"
    ]
   },
   {
